--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<header class="container">
          <div class="row">
-         <h1 class="col-sm-4"><a href="index.html"><embed src="img/stylizedname.pdf" type="application/pdf" height=50px></a></h1>
+         <h1 class="col-sm-4"><a href="index.html"><embed src="img/stylizedname.pdf" type="application/pdf" height=50px view=Fit></a></h1>
 	 
 
           <nav class="col-sm-8 text-right">
