--- a/aboutme.html
+++ b/aboutme.html
@@ -28,7 +28,7 @@
   <section class="jumbotron">
     <div class="container">
 	<figure class="col-sm-4">
-	  <img src="img/nick.pdf">
+	  <img src="img/nick.svg">
 	</figure>
 
 	<figure class="col-sm-8">
