--- a/education.html
+++ b/education.html
@@ -13,7 +13,7 @@
 
   <header class="container">
          <div class="row">
-         <h1 class="col-sm-4"><a href="index.html"><img src="img/stylizedname.pdf" height=50px></a></h1>
+         <h1 class="col-sm-4"><a href="index.html"><img src="img/stylizedname.svg" height=50px></a></h1>
 	 
 
           <nav class="col-sm-8 text-right">
